@@ -81,6 +81,7 @@ POTHOS_MODULE_UTIL(
     SOURCES
         ChannelAligner.cpp
         RandomDropper.cpp
+        TxBurstTimer.cpp
     DESTINATION sdr
     ENABLE_DOCS
 )
